# SAJUGURI

./: .env.example  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/versions/: 0006_remove_day_stem_from_profiles.py
backend/core/: config.py  exceptions.py
backend/crud/: auth.py  consultation.py  profile.py  share.py
backend/db/: models.py
backend/engine/analysis/: dynamics.py
backend/engine/calc/: dae_un.py  day_master_strength.py  il_jin.py  saju.py  sin_sal.py  ten_gods.py  validation.py
backend/engine/data/: earthly_branches.py
backend/llm/: prompts.py  providers.py  rag_builder.py  writer.py
backend/rag/: search.py
backend/routers/: auth.py  profiles.py  question.py  saju.py  share.py
backend/schemas/: profile.py  question.py  report.py  saju.py
backend/services/: auth.py  consultation.py  profile.py  saju.py
frontend/: Dockerfile  README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/composables/: useSajuApi.ts
frontend/pages/: index.vue
frontend/stores/: saju.ts
frontend/types/: saju.ts
frontend/utils/: elementColor.ts
mcp-servers/saju-calc/: README.md  pyproject.toml
mcp-servers/saju-rag/: .env.example  README.md  main.py  pyproject.toml
mcp-servers/saju-rag/knowledge/: ilju.json  sin_sal.json  structure_patterns.json  ten_gods.json  wuxing.json
mcp-servers/saju-rag/lib/: db.py  ingest.py
mcp-servers/saju-rag/tools/: search.py
(+26 files in other folders)
